gradle 버전 다운 그레이드(7 > 4), annotation 사용을 위한 롬복 추가 및 리팩토링

--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ repositories {
 dependencies { // 프로젝트 의존성 선언
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.projectlombok:lombok')
 }
